# space.opera.qtclient

./: .gitignore  CMakeLists.txt  client.pro  genproto.sh
client/: CMakeLists.txt  client.cpp  client.h  client.pro  messageIds.h  packetsocket.cpp  packetsocket.h
libclient/: CMakeLists.txt  basesession.cpp  basesession.h  client.cpp  client.h  handshakeSession.cpp  handshakeSession.h  messageIds.h  packetsocket.cpp  packetsocket.h  session.cpp  session.h  universesession.cpp  universesession.h
protocol/: protocol.proto
protocol_cpp/: protocol_cpp.pro
textclient/: CMakeLists.txt  main.cpp  textclient.pro
uiclient/: CMakeLists.txt  TextButton.qml  main.cpp  main.qml  resources.qrc  uitest.sh
uiclient/mock/spaceopera/client/: Client.qml  README.txt  qmldir
